[package]
name = "minecraft-json"
version = "0.1.0"
authors = ["Ruifeng Xie <ruifengx@outlook.com>"]
edition = "2018"
repository = "https://github.com/ruifengx/minecraft-json.git"
homepage = "https://github.com/ruifengx/minecraft-json.git"
license = "AGPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.66", features = ["arbitrary_precision", "raw_value"] }
